--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,71 @@
-{% extends "base.html" %} 
-{% block body %}
-<div class="content">
-    <div class="jumbotron">
-        <h3 class="display-4">{{ head_title }}</h3>
-        <p class="lead">Specificity in alignments</p>
-        <hr class="my-4"> 
+<!doctype html>
+<html lang="en">
 
-        <form action="/movies" method="POST">
-            <input class="btn btn-primary btn-lg" type="submit" value="JSMol">
-        </form>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- <script type="text/javascript" src="{{ url_for('static', filename='jsmol/jquery/jquery.js') }}"></script> -->
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/JSmol.min.js') }}"></script>
+    <!-- <script type="text/javascript" src="{{ url_for('static', filename='jsmol/j2s/core/package.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmoljQueryExt.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolCore.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolApplet.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolApi.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolControls.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/j2sjmol.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmol.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolConsole.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jsmol/js/JSmolMenu.js') }}"></script> -->
+
+
+    <script type="text/javascript">
+        var Info = {
+            width: 300,
+            height: 300,
+            serverURL: "{{ url_for('static', filename='jsmol/php/jsmol.php') }}", // "static/jsmol/php/jsmol.php",
+            use: "HTML5",
+            j2sPath: "static/jsmol/j2s/",
+            console: "jmolApplet0_infodiv"
+        };
+
+        
+    </script>
+
+    <title>{{ head_title }}</title>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="content">
+            <div class="jumbotron">
+                <h3 class="display-4">{{ head_title }}</h3>
+                <p class="lead">Specificity in alignments</p>
+                <hr class="my-4"> 
+        
+                <form action="/movies" method="POST">
+                    <input class="btn btn-primary btn-lg" type="submit" value="JSMol">
+                </form>
+            </div>
+        </div>
+        
+        
+            <script type="text/javascript">
+                jmolApplet0 = Jmol.getApplet("jmolApplet0", Info);
+                Jmol.script(jmolApplet0, "background black;load $caffeine");
+        
+                // jmolApplet0 = Jmol.getApplet("jmolApplet0", Info);
+                // Jmol.script(jmolApplet0,"background black; load 1a0k.pdb; wireframe only; spin on")
+            </script>
+            <br>
+            <a href="javascript:Jmol.script(jmolApplet0,'spin on')">spin</a>
+            <a href="javascript:Jmol.script(jmolApplet0,'spin off')">off</a>
     </div>
-</div>
-{% endblock %}
+</body>
+
+</html>
