Show local pdb file as a proof-of-concept

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,8 @@
         
             <script type="text/javascript">
                 jmolApplet0 = Jmol.getApplet("jmolApplet0", Info);
-                Jmol.script(jmolApplet0, "background black;load $caffeine");
+                // Jmol.script(jmolApplet0, "background black;load $caffeine");
+                Jmol.script(jmolApplet0, "background black;load static/jsmol/data/5k5s.pdb");
         
                 // jmolApplet0 = Jmol.getApplet("jmolApplet0", Info);
                 // Jmol.script(jmolApplet0,"background black; load 1a0k.pdb; wireframe only; spin on")
