--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,8 @@
                         <input type="file" id="alignment_a" name="alignment_a"><br><br>
                         <label for="alignment_a">Upload Alignment B:</label>
                         <input type="file" id="alignment_b" name="alignment_b"><br><br>
+                        <label for="pdb">Upload PDB file:</label>
+                        <input type="file" id="pdb" name="pdb"><br><br>
 
                         <label for="consensus_threshold">Consensus threshold:</label>
                         <input type="number" id="consensus_threshold" name="consensus_threshold" min="0" max="1" step="0.01"><br><br>
