--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,8 @@
 
 
         <script type="text/javascript">
+            console.log("pdb_filename");
+            console.log("{{ pdb_filename }}");
             jmolApplet0 = Jmol.getApplet("jmolApplet0", Info);
             // Jmol.script(jmolApplet0, "background black;load $caffeine");
             Jmol.script(jmolApplet0, "background black;load static/jsmol/data/5k5s.pdb");
