--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <script type="text/javascript" src="{{ url_for('static', filename='jsmol/JSmol.min.js') }}"></script>
 
@@ -35,7 +36,7 @@
                 <p class="lead">Specificity in alignments</p>
                 <hr class="my-4">
 
-                <div class="form">
+                <!-- <div class="form">
                     <form action="/spial" method="POST" enctype="multipart/form-data">
                         <label for="alignment_a">Upload Alignment A:</label>
                         <input type="file" id="alignment_a" name="alignment_a"><br><br>
@@ -45,11 +46,35 @@
                         <input type="file" id="pdb" name="pdb"><br><br>
 
                         <label for="consensus_threshold">Consensus threshold:</label>
-                        <input type="number" id="consensus_threshold" name="consensus_threshold" min="0" max="1" step="0.01"><br><br>
+                        <input type="number" id="consensus_threshold" name="consensus_threshold" min="0" max="1"
+                            step="0.01"><br><br>
                         <label for="specificty_threshold">Specificity threshold:</label>
-                        <input type="number" id="specificty_threshold" name="specificty_threshold" min="0" max="1" step="0.01"><br><br>
+                        <input type="number" id="specificty_threshold" name="specificty_threshold" min="0" max="1"
+                            step="0.01"><br><br>
 
                         <input class="btn btn-primary btn-lg" type="submit" value="Run Spial">
+                    </form>
+                </div> -->
+
+                <hr>
+
+                <div class="form">
+                    <form enctype="multipart/form-data">
+                        <label for="alignment_a">Upload Alignment A:</label>
+                        <input type="file" id="alignment_a" name="alignment_a"><br><br>
+                        <label for="alignment_a">Upload Alignment B:</label>
+                        <input type="file" id="alignment_b" name="alignment_b"><br><br>
+                        <label for="pdb">Upload PDB file:</label>
+                        <input type="file" id="pdb" name="pdb"><br><br>
+
+                        <label for="consensus_threshold">Consensus threshold:</label>
+                        <input type="number" id="consensus_threshold" name="consensus_threshold" min="0" max="1"
+                            step="0.01"><br><br>
+                        <label for="specificty_threshold">Specificity threshold:</label>
+                        <input type="number" id="specificty_threshold" name="specificty_threshold" min="0" max="1"
+                            step="0.01"><br><br>
+
+                        <input id="form-submit-btn" class="btn btn-primary btn-lg" type="submit" value="Run Spial">
                     </form>
                 </div>
             </div>
@@ -101,9 +126,30 @@
                 "wireframe off;" +
                 jmolStr);
         </script>
+        <script>
+            $(document).ready(function () {
+                
+                //$.post('url', data);
+                $("#form-submit-btn").click(function () {
+                    console.log("*********************** CLICKED");
+                    var data = $('form').serialize();
+                    console.log(data);
+                    
+                    $.post("spial", data,
+                        function (data, status) {
+                            alert("Data: " + data + "\nStatus: " + status);
+                        });
+                });
+            });
+        </script>
         <br>
         <a href="javascript:Jmol.script(jmolApplet0,'spin on')">spin</a>
         <a href="javascript:Jmol.script(jmolApplet0,'spin off')">off</a>
+
+        <button>Send an HTTP POST request to a page and get the result back</button>
+
+
+
     </div>
 </body>
 
